# wan-wei--shuyi-osagent

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  REVIEW.md  compose.yaml  pytest.ini  文档中心_DOCUMENTATION_HUB.md
.github/: dependabot.yml
.workflow/: branch-pipeline.yml  master-pipeline.yml  pr-pipeline.yml
backend/: requirements-dev.txt  requirements.txt
desktop/: README.md  package-lock.json  package.json
docs/: ADVANCED_MEMORY_TECH.md  AFFECTIVE_MEMORY_BRANCH.backup_20260701_091345.md  AFFECTIVE_MEMORY_BRANCH.md  API.md  ARCHITECTURE.backup_20260701_091345.md  ARCHITECTURE.md  ARCHITECTURE.v0_2.backup_20260701_030504.md  ASI_ORIENTED_MEMORY_ENVIRONMENT.md  ASI_RISK_MAPPING.md  AcceptanceTestSpecification.backup_20260701_091345.md  AcceptanceTestSpecification.md  BACKGROUND_READING.md  CHANGELOG.md  COMPATIBILITY_TEST_REPORT.md  COMPETITION_REQUIREMENT_COVERAGE.md  DEPENDENCY_GOVERNANCE.md  DEPLOYMENT.md  EVALUATION.backup_20260701_091345.md  EVALUATION.md  INSPIRATION_POOL.md  KYLIN_DOCS_MAPPING.md  KYLIN_NATIVE_SDK_INTEGRATION.md  KYLIN_VM_TEST_PLAN.md  MEMORY_CAPSULE_V2_SCHEMA.md  MEMORY_GOVERNANCE_POLICY.md  MEMORY_SECURITY_EVAL.md  OPERATIONS.md  OSAGENT_COMPETITION_WORKFLOW.md  OSAGENT_MODEL_GATEWAY_FLOW.md  OVERSIGHT_COMMAND_LOOP.md  PLAN.md  PREFERENCE_KNOWLEDGE_EVOLUTION_POLICY.md  PREFERENCE_KNOWLEDGE_MEMORY_ARCHITECTURE.md  PRODUCTION_MEMORY_EVAL.md  PROJECT_AUDIT_MANIFEST.md  PROJECT_EXPLORATION_20260710.md  (+15 more)
native/kylin-sdk-bridge/: CMakeLists.txt
native/kylin-sdk-bridge/src/: main.cpp
(+308 files in other folders)
